# unicorn-lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  dependencies.make  notes-utf8-branch.md
doc/: character.html  core.html  environment.html  file.html  format.html  index.html  intro.html  io.html  json.html  lexer.html  mbcs.html  normal.html  options.html  path.html  regex.html  segment.html  string.html  style.css  table.html  text-table.html  utf.html  utility.html
scripts/: UnicornConfig.cmake  download-ucd  make-dependencies  make-doc  make-index  make-tables  make-tests  style.css
unicorn/: character-test.cpp  character.cpp  character.hpp  character.md  core-test.cpp  core.cpp  core.hpp  core.md  environment-test.cpp  environment.cpp  environment.hpp  environment.md  file-test.cpp  file.cpp  file.hpp  file.md  format-test.cpp  format.cpp  format.hpp  format.md  iana-character-sets.hpp  index.md  intro.md  io-test.cpp  io.cpp  io.hpp  io.md  iso-script-names.hpp  json-test.cpp  json.cpp  json.hpp  json.md  lexer-test.cpp  lexer.cpp  lexer.hpp  lexer.md  library.hpp  mbcs-test.cpp  mbcs.cpp  mbcs.hpp  (+81 more)
